<resources>
    <string name="app_name">App Interactions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="call">Call</string>
    <string name="enter_coordinates">Enter Coordinates</string>
    <string name="location">Location</string>
    <string name="show_location">Show Location</string>
    <string name="camera_thumbnail">Camera Thumbnail</string>
    <string name="grayscale">Grayscale</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="take_picture">Take Picture</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
</resources>